--- a/app/src/main/res/drawable/bg_user_pressed.xml
+++ b/app/src/main/res/drawable/bg_user_pressed.xml
@@ -5,7 +5,7 @@
         android:color="@color/icons">
 
     </stroke>
-    <solid android:color="@color/red_light" />
+    <solid android:color="@color/red" />
     <corners
         android:bottomLeftRadius="5dp"
         android:topLeftRadius="5dp" />
