--- a/app/src/main/res/drawable/login_pressed.xml
+++ b/app/src/main/res/drawable/login_pressed.xml
@@ -5,6 +5,6 @@
         android:color="@color/icons">
 
     </stroke>
-    <solid android:color="@color/red_light"/>
+    <solid android:color="@color/red"/>
     <corners android:radius="5dp"/>
 </shape>
