--- a/app/src/main/res/drawable/no_car_normal.xml
+++ b/app/src/main/res/drawable/no_car_normal.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/divider_light" />
-    <corners android:radius="5dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimary" />
 </shape>
