--- a/app/src/main/res/layout/custom_history.xml
+++ b/app/src/main/res/layout/custom_history.xml
@@ -5,6 +5,20 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:background="@color/secondary_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
+
+        <TextView
+            android:textColor="@color/icons"
+            android:id="@+id/created_at"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/divider_light"
@@ -18,15 +32,15 @@
             android:orientation="vertical">
 
             <ImageView
-                android:src="@drawable/qrcode_scan_item"
                 android:layout_width="25dp"
-                android:layout_height="25dp" />
+                android:layout_height="25dp"
+                android:src="@drawable/qrcode_scan_item" />
 
             <TextView
                 android:id="@+id/discount"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:textColor="@color/red"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -36,29 +50,23 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="10dp">
 
             <TextView
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/name"
                 android:textColor="@color/primary_text"
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/email"
                 android:textSize="14sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:id="@+id/created_at"
-                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
