--- a/app/src/main/res/layout/custom_people_using.xml
+++ b/app/src/main/res/layout/custom_people_using.xml
@@ -49,45 +49,14 @@
                     android:gravity="left"
                     android:orientation="horizontal">
 
-                    <com.joanzapata.iconify.widget.IconTextView
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        style="?android:attr/ratingBarStyleSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:text="{fa-star}"
-                        android:textColor="@color/red_light"
-                        android:textSize="12sp" />
-
-                    <com.joanzapata.iconify.widget.IconTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:text="{fa-star}"
-                        android:textColor="@color/red_light"
-                        android:textSize="12sp" />
-
-                    <com.joanzapata.iconify.widget.IconTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:text="{fa-star}"
-                        android:textColor="@color/red_light"
-                        android:textSize="12sp" />
-
-                    <com.joanzapata.iconify.widget.IconTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:text="{fa-star-o}"
-                        android:textColor="@color/red_light"
-                        android:textSize="12sp" />
-
-                    <com.joanzapata.iconify.widget.IconTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="2dp"
-                        android:text="{fa-star-o}"
-                        android:textColor="@color/red_light"
-                        android:textSize="12sp" />
+                        android:numStars="5"
+                        android:rating="0.0"
+                        android:stepSize="0.5" />
 
                 </LinearLayout>
 
