--- a/app/src/main/res/layout/custom_review.xml
+++ b/app/src/main/res/layout/custom_review.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/profile"
             android:layout_width="45dp"
             android:layout_height="45dp" />
@@ -54,40 +55,14 @@
                 android:gravity="left"
                 android:orientation="horizontal">
 
-                <com.joanzapata.iconify.widget.IconTextView
+                <RatingBar
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:text="{fa-star}"
-                    android:textColor="@color/red_light"/>
-
-                <com.joanzapata.iconify.widget.IconTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:text="{fa-star}"
-                    android:textColor="@color/red_light"/>
-
-                <com.joanzapata.iconify.widget.IconTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:text="{fa-star}"
-                    android:textColor="@color/red_light" />
-
-                <com.joanzapata.iconify.widget.IconTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:text="{fa-star-o}"
-                    android:textColor="@color/red_light" />
-
-                <com.joanzapata.iconify.widget.IconTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
-                    android:text="{fa-star-o}"
-                    android:textColor="@color/red_light" />
+                    android:numStars="5"
+                    android:rating="0.0"
+                    android:stepSize="0.5" />
 
             </LinearLayout>
 
