--- a/app/src/main/res/layout/dialog_scan.xml
+++ b/app/src/main/res/layout/dialog_scan.xml
@@ -97,40 +97,14 @@
                         android:orientation="horizontal"
                         android:padding="5dp">
 
-                        <com.joanzapata.iconify.widget.IconTextView
+                        <RatingBar
+                            android:id="@+id/ratingBar"
+                            style="?android:attr/ratingBarStyleSmall"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:text="{fa-star}"
-                            android:textColor="@color/red_light" />
-
-                        <com.joanzapata.iconify.widget.IconTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:text="{fa-star}"
-                            android:textColor="@color/red_light" />
-
-                        <com.joanzapata.iconify.widget.IconTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:text="{fa-star}"
-                            android:textColor="@color/red_light" />
-
-                        <com.joanzapata.iconify.widget.IconTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:text="{fa-star-o}"
-                            android:textColor="@color/red_light" />
-
-                        <com.joanzapata.iconify.widget.IconTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:text="{fa-star-o}"
-                            android:textColor="@color/red_light" />
+                            android:numStars="5"
+                            android:rating="0.0"
+                            android:stepSize="0.5" />
 
                     </LinearLayout>
 
