--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -61,6 +61,7 @@
                 android:paddingBottom="10dp">
 
                 <ImageView
+                    android:scaleType="centerCrop"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/profile"/>
