--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -14,6 +14,7 @@
         android:paddingTop="30dp">
 
         <TextView
+            android:textColor="@color/primary_text"
             android:lineSpacingExtra="3dp"
             android:id="@+id/message"
             android:layout_width="match_parent"
@@ -35,7 +36,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:text="Cancel"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
             android:layout_marginLeft="10dp"
@@ -47,7 +48,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:text="Ok"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
 
 
