--- a/app/src/main/res/menu/activity_main_drawer_merchandise.xml
+++ b/app/src/main/res/menu/activity_main_drawer_merchandise.xml
@@ -39,7 +39,7 @@
                 <item
                     android:id="@+id/nav_account"
                     android:icon="@drawable/account"
-                    android:title="Profile" />
+                    android:title="Account" />
                 <item
                     android:id="@+id/update_account"
                     android:icon="@drawable/account_settings_variant"
