--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,7 @@
                 android:paddingBottom="20dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="20dp"
-                android:paddingTop="30dp"
+                android:paddingTop="20dp"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.75">
 
@@ -46,10 +46,13 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:layout_marginTop="10dp"
                             android:id="@+id/arrow_back"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/keyboard_backspace" />
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:clickable="true"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:src="@drawable/chevron_left" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -178,12 +181,14 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginRight="20dp"
         android:elevation="10dp"
-        android:src="@drawable/member_card"
-        app:backgroundTint="@color/red_light"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/new_card"
+        app:backgroundTint="@color/green"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
         app:theme="@style/ThemeOverlay.AppCompat.Light" />
